Update documentation and SQL scripts